fixing errors in communication with rpc

--- a/src/app/address-verifier/address-verifier.component.html
+++ b/src/app/address-verifier/address-verifier.component.html
@@ -1,5 +1,5 @@
-<div class="flex-container">
 
+<div class="flex-container">
     <div class="uploader-row">
         <div class="custom-file uploader">
             <input type="file" class="custom-file-input" id="VC"
@@ -26,5 +26,8 @@
     <div class="alert alert-success success-msg-tab" id="success-msg-tab" role="alert" style="display: none">
             Address verified with success!
     </div>
+    <div class="alert alert-error error-msg-tab" id="error-msg-tab" role="alert" style="display: none">
+        An error occurred during address verification
+</div>
 
 </div>
