--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,14 @@
-
 <div class="flex-container">
-  <button class="btn btn-dark home-btn" id="verify-btn" (click)="onClick($event)">Verify Address</button>
-  <button class="btn btn-dark home-btn" id="buy-token-btn" (click)="onClick($event)">Buy Coins</button>
+
+    <button class="btn btn-dark home-btn" id="verify-btn" (click)="onClick($event)">
+      <i class="fas fa-clipboard-check"></i>
+      <p>Verify address</p>
+    </button>
+    
+    <button class="btn btn-dark home-btn" id="buy-token-btn" (click)="onClick($event)">
+      <i class="fas fa-dollar-sign"></i>
+      <p>Buy coins</p>
+    </button>
+    
+  <div class="bg-item"></div>
 </div>
